<resources>
    <string name="app_name">Task 2.1</string>
    <string name="select_unit_type">Select Unit Type:</string>
    <string name="converted_value_will_appear_here">Converted value will appear here</string>
    <string name="convert">Convert</string>
    <string name="enter_value">Enter value</string>
    <string name="to">to</string>
    <string name="app_header">Unit Converter</string>
    <string name="app_banner_image_description">App Banner</string>
</resources>