<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">


        <!--Image Banner-->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="128dp"
            android:contentDescription="@string/app_banner_image_description"
            app:srcCompat="@drawable/header_image" />


        <!-- Title -->
        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:text="@string/app_header"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold" />


        <!-- Category Selection -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/select_unit_type"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@android:drawable/editbox_background" />


        <!-- Source and Destination spinners -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/sourceSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/destinationSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background" />
        </LinearLayout>


        <!-- Input Field -->
        <EditText
            android:id="@+id/inputValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/enter_value"
            android:inputType="numberDecimal"
            android:padding="12dp"
            android:textSize="16sp" />


        <!-- Convert Button -->
        <Button
            android:id="@+id/convertButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:backgroundTint="#0cc0df"
            android:elevation="6dp"
            android:padding="12dp"
            android:text="@string/convert"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


        <!-- Result Display -->
        <TextView
            android:id="@+id/resultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@android:color/white"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/converted_value_will_appear_here"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>